--- a/src/internation/ListVideo.fxml
+++ b/src/internation/ListVideo.fxml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fx:id="video1" fitHeight="150.0" fitWidth="200.0" layoutX="33.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="video2" fitHeight="150.0" fitWidth="200.0" layoutX="33.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="video3" fitHeight="150.0" fitWidth="200.0" layoutX="350.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
+</Pane>
