--- a/src/internation/Main.fxml
+++ b/src/internation/Main.fxml
@@ -9,7 +9,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" style="-fx-background-color: #CCFF99;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="internation.controller.MainController">
    <children>
       <MediaView fx:id="mv" fitHeight="350.0" fitWidth="570.0" layoutX="22.0" layoutY="14.0" />
-      <ListView fx:id="sub" layoutX="605.0" layoutY="14.0" prefHeight="350.0" prefWidth="281.0" />
+      <ListView fx:id="listsub" layoutX="605.0" layoutY="14.0" prefHeight="350.0" prefWidth="281.0" />
       <Slider fx:id="slider" layoutX="22.0" layoutY="350.0" prefHeight="14.0" prefWidth="570.0" />
    </children>
 </Pane>
