--- a/src/internation/Main.fxml
+++ b/src/internation/Main.fxml
@@ -6,10 +6,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: #CCFF99;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="internation.controller.MainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: #CCFF99;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="internation.controller.VideoController">
    <children>
-      <MediaView fx:id="mv" fitHeight="450.0" fitWidth="700.0" layoutX="22.0" layoutY="19.0" />
-      <Slider fx:id="slider" layoutX="22.0" layoutY="476.0" prefHeight="14.0" prefWidth="710.0" />
-      <TableView fx:id="tableview" layoutX="750.0" layoutY="19.0" prefHeight="450.0" prefWidth="425.0" />
+      <MediaView id="mediaView" fx:id="mediaView" fitHeight="350.0" fitWidth="570.0" layoutX="22.0" layoutY="14.0" />
+      <TableView fx:id="tableview" layoutX="599.0" layoutY="14.0" prefHeight="379.0" prefWidth="287.0" />
+      <Pane layoutX="19.0" layoutY="364.0" prefHeight="45.0" prefWidth="578.0" style="-fx-background-color: red;">
+         <children>
+            <Button id="btnPlay" fx:id="playButton" layoutX="3.0" layoutY="16.0" mnemonicParsing="false" text="Button" />
+            <Label id="lbTime" fx:id="playTime" layoutX="63.0" layoutY="20.0" text="00:00/00:00" />
+         </children>
+      </Pane>
+      <Slider id="slTime" fx:id="timeSlider" layoutX="22.0" layoutY="364.0" prefHeight="14.0" prefWidth="570.0" />
+      <Slider fx:id="volumeSlider" layoutX="469.0" layoutY="424.0" />
    </children>
 </Pane>
