--- a/src/internation/Main.fxml
+++ b/src/internation/Main.fxml
@@ -8,8 +8,23 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: #CCFF99;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="internation.controller.VideoController">
    <children>
-      <MediaView id="mediaView" fx:id="mediaView" fitHeight="350.0" fitWidth="570.0" layoutX="22.0" layoutY="14.0" />
-      <TableView fx:id="tableview" layoutX="599.0" layoutY="14.0" prefHeight="379.0" prefWidth="287.0" />
+      <MediaView id="mediaView" fx:id="mediaView" fitHeight="350.0" fitWidth="600.0" layoutX="22.0" layoutY="14.0" />
+      <TabPane layoutX="599.0" layoutY="14.0" prefHeight="379.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="No Internation">
+               <content>
+                   <TableView fx:id="tableview" layoutX="599.0" layoutY="14.0" prefHeight="379.0" prefWidth="400.0" />
+               </content>
+            </Tab>
+          <Tab text="Internation">
+               <content>
+                  <TableView fx:id="tableviewInternation" prefHeight="379.0" prefWidth="400.0">
+                    
+                  </TableView>
+               </content></Tab>
+          		
+        </tabs>
+      </TabPane>
       <Pane layoutX="19.0" layoutY="364.0" prefHeight="45.0" prefWidth="578.0" style="-fx-background-color: red;">
          <children>
             <Button id="btnPlay" fx:id="playButton" layoutX="3.0" layoutY="16.0" mnemonicParsing="false" text="Button" />
@@ -18,5 +33,6 @@
       </Pane>
       <Slider id="slTime" fx:id="timeSlider" layoutX="22.0" layoutY="364.0" prefHeight="14.0" prefWidth="570.0" />
       <Slider fx:id="volumeSlider" layoutX="469.0" layoutY="424.0" />
+      
    </children>
 </Pane>
