--- a/src/internation/Control.fxml
+++ b/src/internation/Control.fxml
@@ -51,7 +51,33 @@
     </Tab>
     <Tab fx:id="pnVideo" onSelectionChanged="#StudyVideoLoad" text="Study Video" />
     <Tab fx:id="pnHistory" onSelectionChanged="#HistoryLoad" text="History" />
-    <Tab fx:id="pnHelp" onSelectionChanged="#HelpLoad" text="Help" />
+    <Tab fx:id="pnHelp" onSelectionChanged="#HelpLoad" text="Help">
+         <content>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="46.0" layoutY="38.0" text="Hướng dẫn sử dụng phần mềm học tiếng Anh">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="46.0" layoutY="92.0" text="Bạn có thể học các video đã được cài đặt sẵn trong ứng dụng và hệ thống sẽ thường xuyên cập bài học về cho ứng dụng của bạn">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="45.0" layoutY="136.0" text="Bạn có thể chọn video mà bạn yêu thích và học nó thông qua việc select video ">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="283.0" fitWidth="522.0" layoutX="274.0" layoutY="174.0" pickOnBounds="true" preserveRatio="true">
+                  		<image>
+				             <Image url="@../Images/help.png" /> 
+				         </image>
+                  </ImageView>
+               </children>
+            </Pane>
+         </content></Tab>
     
   </tabs>
 </TabPane>
